--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Weld WISE</title>
+        <title>Weld WISE Dev</title>
     </head>
     <body>
         Welcome to Weld WISE.<br/>
-        This site is currently under construction.
+        This site is currently under construction.<br/>
+        Testing
     </body>
 </html>
