--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Weld WISE Dev</title>
+        <title>Weld WISE</title>
     </head>
     <body>
         Welcome to Weld WISE.<br/>
         This site is currently under construction.<br/>
-        Testing
     </body>
 </html>
