--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Weld WISE</title>
+
+        <script src="js/index.js"></script>
     </head>
     <body>
         Welcome to Weld WISE.<br/>
